# co2-fe2o3

./: Cargo.toml  config.toml.example
src/: lib.rs  main.rs  sensor.rs  sink.rs
src/sink/: influx.rs  mod.rs  print.rs
