[package]
name = "co2-fe2o3"
version = "0.1.0"
edition = "2018"
authors = ["Clemens Lang <neverpanic@gmail.com>"]

[dependencies]
async-trait = "^0.1.41"
chrono = "^0.4.19"
futures = "^0.3.7"
hidapi = "^1.2.3"
influx_db_client = "^0.4.4"
rand = "^0.7.3"
rust-crypto = "^0.2"
serde = "^1.0.117"
serde_derive = "^1.0.117"
tokio = { version = "^0.2.5", features = ["full"] }
toml = "^0.5.7"
